--- a/demo.html
+++ b/demo.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="demo.css">
 </head>
 <body>
-    <h1>Shedrack</h1>
+    <h1></h1>
     
     <nav>
         <ul>
-            <li>Home</li>
-            <li>Project</li>
-            <li>Contact</li>
-            <li>Demo</li>
-            <li>Report</li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="project.html">Project</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="demo.html"class="active">Demo</a></li>
+            <li><a href="report.html">Report</a></li>
         </ul>
     </nav>
-    <main><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto inventore provident minima eum sed, voluptate repudiandae maiores id. Earum natus officia dolore dolores? Magni harum quisquam laudantium consequatur qui nihil.</p></main>
+    <main><p>
     <aside></aside>
     <footer></footer>
 </body>
