--- a/index.html
+++ b/index.html
@@ -1,25 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8"> 
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1>Shedrack</h1>
-    
     <nav>
-        <ul>
-            <li>Home</li>
-            <li>Project</li>
-            <li>Contact</li>
-            <li>Demo</li>
-            <li>Report</li>
+        <ul style="text-decoration: none;">
+            <li><a href="index.html" class="active">Home</a></li>
+            <li><a href="project.html">Project</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="demo.html">Demo</a></li>
+            <li><a href="report.html">Report</a></li>
         </ul>
     </nav>
-    <main><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto inventore provident minima eum sed, voluptate repudiandae maiores id. Earum natus officia dolore dolores? Magni harum quisquam laudantium consequatur qui nihil.</p></main>
+
+    <main>
+        <div class="mainContent">
+            <img src="bitmoji.png" alt="">
+            <div class="words">
+            <h1> web development course</h1>
+
+            <p>hi,welcome to my simple website. </p>
+            </div>
+        </div>
+    </main>
     <aside></aside>
-    <footer></footer>
+    <footer>
+        <ul style="list-style: none;">
+            <li><a href=""><img src="icons8-instagram-50.png" alt=""></a></li>
+            <li><a href=""><img src="icons8-whatsapp-50.png" alt=""></a></li>
+            <li><a href=""><img src="icons8-facebook-50.png" alt=""></a></li>
+            <li><a href=""><img src="icons8-twitter-50.png" alt=""></a></li>
+        </ul>
+    </footer>
 </body>
+
 </html>
