--- a/project.html
+++ b/project.html
@@ -7,8 +7,6 @@
     <link rel="stylesheet" href="project.css">
 </head>
 <body>
-    <h1></h1>
-    
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -18,7 +16,14 @@
             <li><a href="report.html">Report</a></li>
         </ul>
     </nav>
-    <main><p>
+    <main>
+        <h2>test</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam adipisci itaque totam illo voluptate, illum cum? Error corrupti quisquam beatae fugiat dolorem, explicabo nulla quaerat neque nesciunt vitae voluptatem a?</p>
+        <img class="ltkImg" src="ltk.jpg" alt="">
+        <img class="kidImg" src="kid.jpg" alt="">
+        <img class="lawImg" src="law.jpg" alt="">
+        <img class="lufyImg" src="lufy.jpg" alt="">
+    </main>
     <aside></aside>
     <footer></footer>
 </body>
