--- a/project.html
+++ b/project.html
@@ -10,14 +10,14 @@
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="project.html"class="active">Project</a></li>
+            <li><a href="project.html" class="active">Project</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="demo.html">Demo</a></li>
             <li><a href="report.html">Report</a></li>
         </ul>
     </nav>
     <main>
-        <h2>test</h2>
+        <h2>one piece anime ft luffy, law and kid</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam adipisci itaque totam illo voluptate, illum cum? Error corrupti quisquam beatae fugiat dolorem, explicabo nulla quaerat neque nesciunt vitae voluptatem a?</p>
         <img class="ltkImg" src="ltk.jpg" alt="">
         <img class="kidImg" src="kid.jpg" alt="">
