--- a/project.html
+++ b/project.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="project.css">
+    <link rel="stylesheet" href="mobile.css" media="screen and (max-width: 800px)">
 </head>
-<body>
-    <nav>
+<body id="clicked">
+    <a href="#clicked" class="showNav on"></a>
+    <a href="#" class="showNav off"></a>
+    <nav class="off">
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="project.html" class="active">Project</a></li>
@@ -18,7 +21,7 @@
     </nav>
     <main>
         <h2>one piece anime ft luffy, law and kid</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam adipisci itaque totam illo voluptate, illum cum? Error corrupti quisquam beatae fugiat dolorem, explicabo nulla quaerat neque nesciunt vitae voluptatem a?</p>
+        <p>In a seafaring world, a young pirate captain sets out with his crew to attain the title of Pirate King, and to discover the mythical treasure known as 'One Piece. ' </p>
         <img class="ltkImg" src="ltk.jpg" alt="">
         <img class="kidImg" src="kid.jpg" alt="">
         <img class="lawImg" src="law.jpg" alt="">
