--- a/demo.html
+++ b/demo.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="demo.css">
+    <link rel="stylesheet" href="mobile.css" media="screen and (max-width: 800px)">
 </head>
-<body>
-    <nav>
+<body id="clicked">
+    <a href="#clicked" class="showNav on"></a>
+    <a href="#" class="showNav off"></a>
+    <nav class="off">
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="project.html">Project</a></li>
@@ -16,6 +19,8 @@
             <li><a href="report.html">Report</a></li>
         </ul>
     </nav>
-    
+    <main>
+    <iframe src="video demo.mp4" frameborder="0" width="150%"></iframe>
+    </main>
 </body>
 </html>
