--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
     <link rel="stylesheet" href="mobile.css" media="screen and (max-width: 800px)">
 </head>
 
-<body id="checked">
-    <nav>
-        <a href="#clicked" class="showNav on "></a>
-       <a href="#" class="showNav off"></a>
+<body id="clicked">
+    <a href="#clicked" class="showNav on"></a>
+    <a href="#" class="showNav off"></a>
+
+    <nav class="off">
         <ul style="text-decoration: none;">
             <li><a href="index.html" class="active">Home</a></li>
             <li><a href="project.html">Project</a></li>
@@ -21,7 +22,6 @@
             <li><a href="report.html">Report</a></li>
         </ul>
     </nav>
-
     <main>
         <div class="mainContent">
             <img class="bitmoji" src="bitmoji.png" alt="">
