--- a/report.html
+++ b/report.html
@@ -50,6 +50,12 @@
             <img src="screenshotproject.png" alt="sc">
             <img src="screenshotdemo.png" alt="sc">
             <img src="screenshotreport.png" alt="sc">
+            <img src="screenshot democss.png" alt="sc">
+            <img src="screenshotcontactcsss.png" alt="sc">
+            <img src="Screenshotprojectcss.png" alt="sc">
+            <img src="screenshotmobilecss.png" alt="sc">
+            <img src="screenshotreportcsss.png" alt="sc">
+            
             
 
         </div>
